meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/battery/snapshots/memfaultd__metrics__battery__battery_reading_handler__tests__handle_push.snap
---
source: memfaultd/src/metrics/battery/battery_reading_handler.rs
expression: "serde_json::to_string_pretty(&sorted_metrics).expect(\"metric_store should be serializable\")"
---
{
  "battery_discharge_duration_ms": 0.0,
  "battery_soc_pct": null,
  "battery_soc_pct_drop": 0.0
}
