meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/battery/snapshots/memfaultd__metrics__battery__battery_reading_handler__tests__ignores_data_when_data_collection_is_off.snap
---
source: memfaultd/src/metrics/battery/battery_reading_handler.rs
expression: "serde_json::to_string_pretty(&metrics).expect(\"metric_store should be serializable\")"
---
{}
