meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/battery/snapshots/memfaultd__metrics__battery__battery_reading_handler__tests__nonconsecutive_discharges.snap
---
source: memfaultd/src/metrics/battery/battery_reading_handler.rs
expression: "&sorted_metrics"
---
{
  "battery_discharge_duration_ms": 60000.0,
  "battery_soc_pct": 0.0,
  "battery_soc_pct_drop": 60.0
}
